--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,3 +23,5 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build --no-daemon
+    - name: Test with Gradle
+      run: ./gradlew test
